--- a/movie-project.html
+++ b/movie-project.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="jquery-3.6.1.min.js"></script>
     <script src="keys.js"></script>
+    <script src="js/movie-project.js"></script>
 </head>
 <body>
     <nav id="main-nav" class="navbar bg-light">
