slightly adjusted the body to make things more visible

--- a/movie-project.html
+++ b/movie-project.html
@@ -10,6 +10,7 @@
     <script src="js/movie-project.js"></script>
 </head>
 <body>
+<header>
     <nav id="main-nav" class="navbar bg-light">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -18,10 +19,13 @@
             <span class="navbar-brand mb-0 h1">Navbar</span>
         </div>
     </nav>
+</header>
+
+<main>
     <div class="container-fluid ">
-        <div class="card" style="width: 18rem;">
+        <div class="card">
             <div id="card-nav" class="d-flex space-between bg-dark text-light">
-                 <h5 class="card-title me-auto">Movie Title</h5>
+                <h5 class="card-title me-auto">Movie Title</h5>
                 <div id="movie rating" class="me-auto">
                     ***** (4.8/ 5)
                 </div>
@@ -34,9 +38,8 @@
                 <p class="card-text">(Movie) will be coming soon to a theatre near you! (movie description)</p>
             </div>
         </div>
-
     </div>
-
+</main>
 
 
 <!-- JavaScript Bundle with Popper -->
