--- a/movie-project.html
+++ b/movie-project.html
@@ -5,10 +5,9 @@
     <title>Movie Project Layout</title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <script src="jquery-3.6.1.min.js"></script>
+    <script src="js/jquery-3.6.1.min.js"></script>
     <script src="keys.js"></script>
-    <script src="js/movie-project.js"></script>
-    <script src="js/jquery.js"></script>
+
     <link rel="stylesheet" href="css/css.css">
 </head>
 <body >
@@ -61,26 +60,14 @@
 </header>
 
 <main>
-    <div id="carousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-touch="true" data-bs-interval="false">
-        <div id="movie-card-container" class="carousel-inner">
-            <!--                    cards go here  -->
-
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
-    <div class="container-fluid ">
+    <div id="movie-card-container">
     </div>
 </main>
 
 
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+<script src="js/movie-project.js"></script>
+<script src="js/jquery.js"></script>
 </body>
 </html>
