dark mode added

--- a/movie-project.html
+++ b/movie-project.html
@@ -21,7 +21,7 @@
                 <ul class="dropdown-menu">
                     <li><button id="new-movie-button" class="dropdown-item" data-bs-toggle="modal" data-bs-target="#new-movie-modal"><span class="badge bg-secondary">+</span> New Movie</button></li>
                     <li><a id="filter-button" class="dropdown-item"><span class="badge bg-secondary">V</span> Filter</a></li>
-                    <li><a id="dark-mode-button" class="dropdown-item bg-dark text-light"><span class="badge bg-light text-dark">0</span> Dark</a></li>
+                    <li><a id="dark-mode-button" class="dropdown-item bg-dark text-light"><span class="badge .dark-mode">0</span> Dark</a></li>
                 </ul>
             </div>
 <!-- Modal for adding new card -->
@@ -51,8 +51,6 @@
                     </div>
                 </div>
             </div>
-<button id="test">click</button>
-
             <span class="navbar-brand mb-0 h1">Movies Website</span>
 
         </div>
