--- a/movie-project.html
+++ b/movie-project.html
@@ -5,9 +5,6 @@
     <title>Movie Project Layout</title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <script src="js/jquery-3.6.1.min.js"></script>
-    <script src="keys.js"></script>
-
     <link rel="stylesheet" href="css/css.css">
 </head>
 <body >
@@ -30,10 +27,10 @@
             <div class="modal fade" id="new-movie-modal" tabindex="-1" aria-labelledby="new-modal-label" aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
-                        <div class="modal-header">
+                        <header class="modal-header">
                             <h1 class="modal-title fs-5" id="new-modal-label">New Movie</h1>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
+                        </header>
                         <div class="modal-body">
                             <form>
                                 <div class="mb-3">
@@ -44,12 +41,16 @@
                                     <label for="new-description-text" class="col-form-label">Description:</label>
                                     <textarea class="form-control" id="new-description-text"></textarea>
                                 </div>
+                                <div class="mb-3">
+                                    <label for="new-rating" class="col-form-label">Rating:</label>
+<!--                                    <textarea class="form-control" id="new-description-text"></textarea>-->
+                                </div>
                             </form>
                         </div>
-                        <div class="modal-footer">
+                        <footer class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary">Add</button>
-                        </div>
+                            <button type="submit" class="btn btn-primary" data-bs-dismiss="modal" id="add-new-button">Add</button>
+                        </footer>
                     </div>
                 </div>
             </div>
@@ -64,18 +65,17 @@
                         <div class="modal-body">
                             <form>
                                 <div class="mb-3">
-                                    <label for="new-movie-title" class="col-form-label">Edit Title:</label>
+                                    <label for="edit-movie-title" class="col-form-label">Edit Title:</label>
                                     <input type="text" class="form-control" id="edit-movie-title">
                                 </div>
                                 <div class="mb-3">
-                                    <label for="new-description-text" class="col-form-label">Edit Description:</label>
+                                    <label for="edit-description-text" class="col-form-label">Edit Description:</label>
                                     <textarea class="form-control" id="edit-description-text"></textarea>
                                 </div>
                             </form>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary">Add</button>
+                            <button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="edit-button">Submit</button>
                         </div>
                     </div>
                 </div>
@@ -93,7 +93,7 @@
 </main>
 
 
-<!-- JavaScript Bundle with Popper -->
+<script src="js/jquery-3.6.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 <script src="js/movie-project.js"></script>
 <script src="js/jquery.js"></script>
