delete functionality added. need to test

--- a/movie-project.html
+++ b/movie-project.html
@@ -41,7 +41,7 @@
                                     <label for="new-description-text" class="col-form-label">Description:</label>
                                     <textarea class="form-control" id="new-description-text"></textarea>
                                 </div>
-                                <div class="mb-3">
+                                <div class="mb-3 btn-group dropend">
                                     <label for="new-rating" class="col-form-label">Rating:</label>
                                         <button class="form-control dropdown-toggle" type="button" data-bs-toggle="dropdown" id="new-rating"></button>
                                             <ul class="dropdown-menu">
